<resources>
    <string name="app_name">Greenify</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_log_in_to_your_account_to_join_the_community">Please log in to join the community</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="logo_description">text_leaf</string>
    <string name="register">Register</string>
    <string name="or_sign_in_with">OR SIGN IN WITH</string>
    <string name="login_with_google">Login with Google</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="about_us">About us</string>
    <string name="need_help">Need help ?</string>

    <string name="sign_up">Sign Up</string>
    <string name="create_an_account_for_exclusive_features_and_services">Create an account for exclusive features and services</string>
    <string name="username">Username</string>
    <string name="already_a_member">Already a member ?</string>
    <string name="globally_2023">Globally, 2023</string>
    <string name="the_world_counts_inc_2023">THE WORLD COUNTS INC. 2023</string>
    <string name="_1_995_215_982">1,995,215,982</string>
    <string name="our_mission">Our Mission</string>
    <string name="app_mission">Fueled by passion and community, we empower individuals to tackle trash and build a cleaner future. Join us, one cleanup at a time.</string>
    <string name="kitten">Kitten</string>
    <string name="quoc_quote">Driven to make the world cleaner and better. Passionate about environmental solutions, waste management, and sustainability.\nSeeking collaboration to build a greener future.</string>
    <string name="quoc_title">Doan Huu Quoc\nCo-Founder, CEO and Chairman</string>
    <string name="our_ceo">Our CEO</string>
    <string name="phone_num">083 9999 999</string>
    <string name="tel_84">Tel (+84)</string>
    <string name="huuquoc7603_gmail_com">huuquoc7603@gmail.com</string>
    <string name="address">Address</string>
    <string name="contact_us">Contact us</string>
    <string name="quoc_address">123 Street, D.13, W.10, HCMC</string>
    <string name="copyright_2023_mudoker">Copyright @2023, Mudoker</string>
    <string name="app_version">App Version 1.1.0</string>
    <string name="tons_of_waste_dumped">Tons of waste dumped</string>

    <string name="walkthru_title_learning_title">Collaborative Learning and Sharing</string>
    <string name="walkthru_title_learning_des">Together, we learn, share expertise, gain insights, and grow.</string>

    <string name="walkthru_title_planting_title">Heal the Earth, One Action at a Time</string>
    <string name="walkthru_title_planting_des">No matter how small, your actions can create a ripple effect of positive change.</string>

    <string name="walkthru_title_collecting_title">Together, We Will Clean the World</string>
    <string name="walkthru_title_collecting_des">Empowering individuals to care for their environment for a cleaner future.</string>

    <string name="walkthru_title_volunteering_title">Join Hands, Build Hope</string>
    <string name="walkthru_title_volunteering_des">Together, let us build a future that is just, equitable, and sustainable.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="digging">Digging</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="setting">Setting</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="_84_083_875_6241">(+84) 083 875 6241</string>
    <string name="confirm">Confirm</string>
    <string name="always_on">Always On</string>
    <string name="only_alerts">Only Alerts</string>
    <string name="always_off">Always Off</string>
    <string name="sound_amp_notification"><![CDATA[Sound & Notification]]></string>
    <string name="settings">Settings</string>
    <string name="abcxyzabcxyzabcxyz">abcxyzabcxyzabcxyz</string>
    <string name="phone">Phone</string>
    <string name="account_center">Profile</string>
    <string name="map_zoom">Map Zoom</string>
    <string name="distance_unit">Distance Unit</string>
    <string name="metric">Metric</string>
    <string name="log_out">Log Out</string>
    <string name="push_notification">Push Notification</string>
    <string name="mudoker">Mudoker</string>
    <string name="hosts">Hosts</string>
    <string name="points">Points</string>
    <string name="_1307">1307</string>
    <string name="done">Done</string>
    <string name="event_title">Event Title</string>
    <string name="hello_worlddddd">Hello Worlddddd!!!</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="_999">999</string>
    <string name="joins">Joins</string>
    <string name="your_events">Your Events</string>
    <string name="your_enrollments">Your Enrollments</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="oauth_client_id">1051231906448-cf5ngtab9vppqegou5jknjggq3rrne9f.apps.googleusercontent.com</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoibXVkb2tlciIsImEiOiJjbHFkZnFtOXkwY2hyMnFwbHl2a2JwZnhxIn0.UkL02Bnu2IQoyIT5-1If1Q</string>
    <string name="location">LOCATION</string>
    <string name="nothing_to_show">Nothing to show</string>

    <string name="undefined">Undefined</string>
</resources>