<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_dashboard"
        android:title="@string/home"
        android:icon="@drawable/ic_dashboard" />

    <item
        android:id="@+id/bottom_nav_noti"
        android:title="@string/notification"
        android:icon="@drawable/ic_notification" />

    <item
        android:id="@+id/bottom_nav_account"
        android:title="@string/account"
        android:icon="@drawable/ic_user" />

    <item
        android:id="@+id/bottom_nav_setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings" />

    <item
        android:id="@+id/bottom_nav_about_us"
        android:title="@string/about_us"
        android:icon="@drawable/ic_info" />
</menu>