<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/background_light"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/about_layout_header"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/earth">

            <TextView
                android:id="@+id/about_txt_waste_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1_995_215_982"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:alpha="0.9"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="100dp"
                android:textStyle="bold"
                android:layout_marginHorizontal="10dp"
                android:textSize="55sp"/>

            <TextView
                android:id="@+id/about_txt_waste_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="38sp"
                android:text="@string/tons_of_waste_dumped"
                android:textAlignment="center"
                android:alpha="0.9"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/about_txt_waste_num"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/about_txt_waste_scale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/globally_2023"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="150dp"
                app:layout_constraintTop_toBottomOf="@id/about_txt_waste_des"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/the_world_counts_inc_2023"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="16sp"
                android:alpha="0.9"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/about_txt_our_mission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_mission"
            app:layout_constraintTop_toBottomOf="@id/about_layout_header"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="20sp"/>

        <TextView
            android:id="@+id/about_txt_our_mission_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/app_mission"
            android:textSize="20sp"
            android:lineSpacingExtra="6dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/about_txt_our_mission"/>

        <ImageView
            android:id="@+id/about_txt_ceo_ava"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/quoc_ava"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_txt_our_mission_des"
            android:contentDescription="@string/kitten" />

        <TextView
            android:id="@+id/about_txt_our_ceo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_ceo"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/about_txt_ceo_ava"/>

        <TextView
            android:id="@+id/about_txt_our_ceo_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/about_txt_our_ceo"
            android:textSize="20sp"
            android:lineSpacingExtra="6dp"
            android:text="@string/quoc_quote"/>

        <TextView
            android:id="@+id/about_txt_ceo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_txt_our_ceo_des"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAlignment="textEnd"
            android:text="@string/quoc_title"/>

        <TextView
            android:id="@+id/about_txt_ceo_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/contact_us"
            app:layout_constraintTop_toBottomOf="@id/about_txt_ceo_title"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/about_txt_our_ceo_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@id/about_txt_ceo_contacts"
            app:layout_constraintLeft_toLeftOf="@id/about_txt_ceo_contacts"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/about_txt_our_ceo_email_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/about_txt_our_ceo_email"
            android:text="@string/huuquoc7603_gmail_com"
            android:textSize="18sp"
            android:layout_marginStart="44dp"
            app:layout_constraintLeft_toRightOf="@id/about_txt_our_ceo_email"/>

        <TextView
            android:id="@+id/about_txt_our_ceo_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel_84"
            app:layout_constraintTop_toBottomOf="@id/about_txt_our_ceo_email"
            app:layout_constraintLeft_toLeftOf="@id/about_txt_our_ceo_email"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/about_txt_our_ceo_tel_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/about_txt_our_ceo_tel"
            android:text="@string/phone_num"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            app:layout_constraintLeft_toRightOf="@id/about_txt_our_ceo_tel"/>

        <TextView
            android:id="@+id/about_txt_our_ceo_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            app:layout_constraintTop_toBottomOf="@id/about_txt_our_ceo_tel"
            app:layout_constraintLeft_toLeftOf="@id/about_txt_our_ceo_tel"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/about_txt_our_ceo_address_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/about_txt_our_ceo_address"
            android:text="@string/quoc_address"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            app:layout_constraintLeft_toRightOf="@id/about_txt_our_ceo_address" />

        <TextView
            android:id="@+id/about_txt_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version_1_0_0"
            app:layout_constraintTop_toBottomOf="@id/about_txt_our_ceo_address_des"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginEnd="20dp"
            android:alpha="0.9"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginVertical="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_2023_mudoker"
            app:layout_constraintTop_toBottomOf="@id/about_txt_app_version"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="18sp"
            android:alpha="0.9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginVertical="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
