<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/walk_thru_slider_img"
        android:layout_width="750dp"
        android:layout_height="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:src="@drawable/volunteering"
        android:contentDescription="@string/digging" />

    <TextView
        android:id="@+id/walk_thru_slider_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walkthru_title_volunteering_title"
        app:layout_constraintTop_toBottomOf="@id/walk_thru_slider_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:alpha="0.8"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/walk_thru_slider_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/walkthru_title_volunteering_des"
        app:layout_constraintTop_toBottomOf="@id/walk_thru_slider_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="23sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginHorizontal="15dp"
        android:alpha="0.6"
        android:lineSpacingExtra="2dp"
        android:layout_marginTop="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>